--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ kramdown:
 owner:
   name: amodrono
   avatar: leonids-logo.png
-  job: "A jekyll theme"
+  job: "Proud Spanish Programmer"
   bio: "A simple and awesome blog theme powered by jekyll."
   email:
   disqus-shortname:
